# Music-AI-Stuff

.github/workflows/: build.yml
VocalChopperVST/: .gitignore  BUILD_INSTRUCTIONS.md  CMakeLists.txt  README.md
VocalChopperVST/.github/workflows/: build.yml
VocalChopperVST/Source/: AlignmentAnalyzer.cpp  AlignmentAnalyzer.h  AlignmentTimeline.cpp  AlignmentTimeline.h  ChopEngine.cpp  ChopEngine.h  CleanTab.cpp  CleanTab.h  FadeDesigner.cpp  FadeDesigner.h  LookAndFeel.h  MidiChopTrigger.cpp  MidiChopTrigger.h  NoiseGate.cpp  NoiseGate.h  PadGrid.cpp  PadGrid.h  PitchDetector.cpp  PitchDetector.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PresetManager.h  SpectrumAnalyzer.cpp  SpectrumAnalyzer.h  StretchEngine.cpp  StretchEngine.h  StretchTab.cpp  StretchTab.h  UIComponents.h  UndoHistory.h  WaveformDisplay.cpp  WaveformDisplay.h
